# penguin-nativeport

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  ctr_native.c  game_includes.h  game_unity.h  main.c  package-linux.sh  platform.h  pre-release-audit.sh
android/: .gitignore  README.md  settings.gradle
android/app/: build.gradle
game/: 221.c  222.c  223.c  224.c  225.c  BOTS.c  CAM.c  CDSYS.c  COLL.c  DebugFont.c  DecalFont.c  DecalGlobal.c  DecalHUD.c  DecalMP.c  Display.c  DotLights.c  DrawConfetti.c  DrawTires.c  ElimBG.c  FLARE.c  GAMEPAD.c  GAMEPROG.c  GhostReplay.c  GhostTape.c  INSTANCE.c  JitPool.c  LHMatrix.c  LIST.c  LevInstDef.c  LibraryOfModels.c  LinkedCollide.c  MEMPACK.c  PROC.c  Particle.c  PickupBots.c  PlayLevel.c  Podium.c  PushBuffer.c  QueueLoadTrack.c  RECTMENU.c  (+12 more)
game/226/: 226_00_DrawLevelOvr1P.c  R226.c
game/227/: 227_00_DrawLevelOvr2P.c  R227.c
game/228/: 228_00_DrawLevelOvr3P.c  R228.c
game/229/: 229_00_DrawLevelOvr4P.c  R229.c
game/230/: 230_31_MM_MenuProc_Main.c  230_50_MM_Characters_MenuProc.c  230_56_MM_TrackSelect_MenuProc.c  230_59_MM_CupSelect_MenuProc.c  230_63_MM_Battle_MenuProc.c  230_65_MM_HighScore_Draw.c  230_79_MM_Video_VLC_Decode.c  D230.c  MM_Battle.c  MM_Characters.c  MM_CheatCodes.c  MM_CupSelect.c  MM_HighScore.c  MM_MenuFlow.c  MM_Scrapbook.c  MM_Title.c  MM_TrackSelect.c  MM_Video.c  R230.c
game/231/: 231_002_RB_Player_ModifyWumpa.c  231_009_RB_Hazard_ThCollide_Generic_Alt.c  231_011_RB_Hazard_ThCollide_Generic.c  231_057_RB_Baron_LInB.c  231_069_072_RB_Crystal.c  231_089_091_RB_FlameJet.c  231_099_100_RB_Minecart.c  231_104_109_RB_Plant.c  231_Full.c  D231.c  RB_Armadillo.c  RB_Baron.c  RB_Blade.c  RB_Blowup.c  RB_Bubbles.c  RB_Burst.c  RB_Crate.c  RB_Crystal.c  RB_CtrLetter.c  RB_Explosion.c  RB_Fireball.c  RB_FlameJet.c  RB_Follower.c  RB_Fruit.c  RB_GenericMine.c  RB_Hazard.c  RB_Instance.c  RB_MaskShieldCloud.c  RB_MinePool.c  RB_Minecart.c  RB_MovingExplosive.c  RB_Orca.c  RB_Plant.c  RB_Player.c  RB_Potion.c  RB_Seal.c  RB_Snowball.c  RB_Spider.c  RB_TNT.c  RB_Teeth.c  (+2 more)
game/232/: 232_25_AH_Pause_Draw.c  232_29_AH_HintMenu_MenuProc.c  AH_Door.c  AH_Garage.c  AH_HintMenu.c  AH_Map.c  AH_MaskHint.c  AH_Pause.c  AH_SaveObj.c  AH_Sign.c  AH_WarpPad.c  D232.c  R232.c
game/233/: 233_01_CS_Thread_LInB.c  233_14_CS_Thread_UseOpcode.c  233_20_CS_LoadBoss.c  233_21_CS_Camera_ThTick_Boss.c  233_23_CS_Camera_ThTick_Podium.c  233_24_CS_Thread_Init.c  233_32_CS_Podium_Stand_Init.c  233_33_CS_Podium_FullScene_Init.c  233_35_CS_Cutscene_Start.c  233_37_40_CS_Garage.c  233_45_CS_Credits_DestroyCreditGhost.c  233_46_CS_Credits_AnimateCreditGhost.c  233_49_CS_Credits_NewDancer.c  233_51_CS_Credits_End.c  233_53_CS_Credits_DrawEpilogue.c  233_stubs.c  CS_Camera.c  CS_Credits.c  CS_Garage.c  CS_Instance.c  CS_LoadBoss.c  CS_Podium.c  CS_ScriptCmd.c  CS_Thread.c  D233.c  R233.c
game/AltMods/: Mods4.c
game/COLL/: COLL_04_FIXED_PlayerSearch.c
game/CTR/: CTR_Box.c  CTR_Error.c
game/HOWL/: HOWL_AudioState.c  HOWL_Bank.c  HOWL_Channel.c  HOWL_CseqOpcode.c  HOWL_Engine.c  HOWL_Garage.c  HOWL_LevelAudio.c  HOWL_Load.c  HOWL_OtherFX.c  HOWL_OtherFXRecycle.c  HOWL_Playback.c  HOWL_Settings.c  HOWL_SongPool.c  HOWL_Voiceline.c
game/LHMatrix/: LHMatrix_0_Parent.c
game/LOAD/: LOAD_00_50_FULL.c  LOAD_14_InitCD.c  LOAD_Assets.c  LOAD_Callbacks.c  LOAD_File.c  LOAD_Howl.c  LOAD_Hub.c  LOAD_IsOpen.c  LOAD_Level.c  LOAD_ModelPtrs.c  LOAD_Overlays.c  LOAD_Queue.c  LOAD_TenStages.c
game/LevInstDef/: LevInstDef_1_RePack.c
game/LinkedCollide/: LinkedCollide_0_Radius.c  LinkedCollide_1_HitboxDesc.c  LinkedCollide_2_Hitbox.c
game/MAIN/: MainFrame.c  MainFrame_08_RenderFrame.c  MainFrame_RenderFrame.c  MainFreeze.c  MainGameEnd.c  MainGameStart.c  MainInit.c  MainInit_06_Drivers.c  MainKillGame_01_LaunchSpyro2.c  MainMain.c  MainRaceTrack.c  MainStats.c
game/MATH/: MATH_0_Sin.c  MATH_1_Cos.c  MATH_4_VectorLength.c  MATH_6_MatrixMul.c  MATH_7_MatrixStubs.c  TRIG_AngleSinCos.c
game/MEMCARD/: MEMCARD_FileIO.c
game/MEMPACK/: MEMPACK_01_SwapPacks.c  MEMPACK_02_NewPack.c  MEMPACK_03_GetFreeBytes.c  MEMPACK_04_AllocMem.c  MEMPACK_05_AllocHighMem.c  MEMPACK_06_ClearHighMem.c  MEMPACK_07_ReallocMem.c  MEMPACK_08_PushState.c  MEMPACK_09_ClearLowMem.c  MEMPACK_10_PopState.c  MEMPACK_11_PopToState.c
game/MixRNG/: MixRNG.c  RngDeadCoed.c
game/PCDRV/: pcdrv.c
game/RECTMENU/: RECTMENU_02_DrawTime.c
game/RaceFlag/: RaceFlag_12_DrawLoadingString.c  RaceFlag_13_DrawSelf.c
game/RenderBucket/: RenderBucket_QueueExecute.c
game/RenderLevel/: AnimateWater.c  DrawLevelOvr_shared.h  RenderLists.c
game/RenderTires/: DrawTires_Reflection.c  DrawTires_Solid.c
game/RenderWeather/: RedBeaker_RenderRain.c  RenderWeather.c
game/SelectProfile/: SelectProfile_07_Init.c
game/SubmitName/: SubmitName.c  SubmitName_1_DrawMenu.c
game/UI/: UI_Clock.c  (+26 more)
include/: common.h  ctr_gte.h  ctr_math.h  decomp_functions.h  functions.h  game_layouts.h  gpu.h  macros.h  namespace_Camera.h  namespace_Cdsys.h  namespace_Decal.h  namespace_DrawLevel.h  namespace_Gamepad.h  namespace_Ghost.h  namespace_Howl.h  namespace_Instance.h  namespace_JitPool.h  namespace_Level.h  namespace_List.h  namespace_Lng.h  namespace_Load.h  namespace_Main.h  namespace_Memcard.h  namespace_Mempack.h  namespace_Particle.h  namespace_Proc.h  namespace_PushBuffer.h  namespace_RectMenu.h  namespace_SelectProfile.h  namespace_UI.h  namespace_Vehicle.h  ovr_226.h  ovr_227.h  ovr_228.h  ovr_229.h  ovr_230.h  ovr_231.h  ovr_232.h  ovr_233.h  prim.h  (+1 more)
platform/: native_assets.c  native_audio.c  native_cd.c  native_checkpoint.c  native_disc_image.c  native_gpu.c  native_gpu_links.c  native_gte_core.c  native_input.c  native_libgpu.c  native_platform.c  native_renderer.c  native_rom_picker.c  native_str.c  native_touch.c
(+41 files in other folders)
